# QuantAI-OS

./: .env.example  .gitignore  .replit  Information.md  README.md  Terminal-Help.md  main.py  pyproject.toml  requirements.txt
src/quantai/: __init__.py  cli.py  config.py  database.py  logger.py  visualization.py
src/quantai/ai/: __init__.py  commentary.py
src/quantai/data/: __init__.py  features.py  loader.py
src/quantai/models/: __init__.py  ensemble.py  linear.py  trees.py
src/quantai/risk/: __init__.py  regimes.py  sizing.py
